ConverseSqlAgent/cdk.out/ConverseSqlAgentStack.template.json
{
 "Resources": {
  "DefaultVPCDynamoDBEndpoint395433AB": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "RouteTableIds": [
     {
      "Ref": "NewPrivateSubnet0RouteTable838DDC9F"
     },
     {
      "Ref": "NewPrivateSubnet1RouteTable96A18886"
     },
     {
      "Ref": "NewPrivateSubnet2RouteTable73A6DC6B"
     },
     {
      "Ref": "NewPrivateSubnet3RouteTable4152B981"
     },
     {
      "Ref": "NewPrivateSubnet4RouteTableC0B4F604"
     },
     {
      "Ref": "NewPrivateSubnet5RouteTable20561108"
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".dynamodb"
      ]
     ]
    },
    "VpcEndpointType": "Gateway",
    "VpcId": "vpc-0478b09b88b05919e"
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/DefaultVPC/DynamoDBEndpoint/Resource"
   }
  },
  "DefaultVPCSecretsManagerEndpointAA3C9C40": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "SharedSecurityGroupA3C42D70",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-east-1.secretsmanager",
    "SubnetIds": [
     {
      "Ref": "NewPrivateSubnet0SubnetA4A9D5B6"
     },
     {
      "Ref": "NewPrivateSubnet1Subnet545D8116"
     },
     {
      "Ref": "NewPrivateSubnet2Subnet58D70B0B"
     },
     {
      "Ref": "NewPrivateSubnet3SubnetA975ED87"
     },
     {
      "Ref": "NewPrivateSubnet4Subnet8324B678"
     },
     {
      "Ref": "NewPrivateSubnet5Subnet8255FDA5"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": "vpc-0478b09b88b05919e"
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/DefaultVPC/SecretsManagerEndpoint/Resource"
   }
  },
  "DefaultVPCBedrockEndpoint820EE8F3": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "SharedSecurityGroupA3C42D70",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-east-1.bedrock-runtime",
    "SubnetIds": [
     {
      "Ref": "NewPrivateSubnet0SubnetA4A9D5B6"
     },
     {
      "Ref": "NewPrivateSubnet1Subnet545D8116"
     },
     {
      "Ref": "NewPrivateSubnet2Subnet58D70B0B"
     },
     {
      "Ref": "NewPrivateSubnet3SubnetA975ED87"
     },
     {
      "Ref": "NewPrivateSubnet4Subnet8324B678"
     },
     {
      "Ref": "NewPrivateSubnet5Subnet8255FDA5"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": "vpc-0478b09b88b05919e"
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/DefaultVPC/BedrockEndpoint/Resource"
   }
  },
  "BastionHostSG7EC1B225": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Allow SSH and HTTP",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow SSH",
      "FromPort": 22,
      "IpProtocol": "tcp",
      "ToPort": 22
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow HTTP",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": "vpc-0478b09b88b05919e"
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/BastionHostSG/Resource"
   }
  },
  "MyInstanceInstanceRole1C4D4747": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ConverseSqlAgentStack/MyInstance"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/MyInstance/InstanceRole/Resource"
   }
  },
  "MyInstanceInstanceProfile2784C631": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "MyInstanceInstanceRole1C4D4747"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/MyInstance/InstanceProfile"
   }
  },
  "MyInstanceA12EC128": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "IamInstanceProfile": {
     "Ref": "MyInstanceInstanceProfile2784C631"
    },
    "ImageId": {
     "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amikernel510hvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter"
    },
    "InstanceType": "t3.micro",
    "KeyName": "separ-key-pair",
    "NetworkInterfaces": [
     {
      "AssociatePublicIpAddress": true,
      "DeviceIndex": "0",
      "GroupSet": [
       {
        "Fn::GetAtt": [
         "BastionHostSG7EC1B225",
         "GroupId"
        ]
       }
      ],
      "SubnetId": "subnet-0b49f4019da4f6404"
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "ConverseSqlAgentStack/MyInstance"
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash\nyum update -y\nsudo yum -y install mysql"
    }
   },
   "DependsOn": [
    "MyInstanceInstanceRole1C4D4747"
   ],
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/MyInstance/Resource"
   }
  },
  "NewPrivateSubnet0SubnetA4A9D5B6": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "172.31.96.0/20",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ConverseSqlAgentStack/NewPrivateSubnet0"
     }
    ],
    "VpcId": "vpc-0478b09b88b05919e"
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/NewPrivateSubnet0/Subnet"
   }
  },
  "NewPrivateSubnet0RouteTable838DDC9F": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ConverseSqlAgentStack/NewPrivateSubnet0"
     }
    ],
    "VpcId": "vpc-0478b09b88b05919e"
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/NewPrivateSubnet0/RouteTable"
   }
  },
  "NewPrivateSubnet0RouteTableAssociationEEAAB762": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NewPrivateSubnet0RouteTable838DDC9F"
    },
    "SubnetId": {
     "Ref": "NewPrivateSubnet0SubnetA4A9D5B6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/NewPrivateSubnet0/RouteTableAssociation"
   }
  },
  "NewPrivateSubnet1Subnet545D8116": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "172.31.112.0/20",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ConverseSqlAgentStack/NewPrivateSubnet1"
     }
    ],
    "VpcId": "vpc-0478b09b88b05919e"
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/NewPrivateSubnet1/Subnet"
   }
  },
  "NewPrivateSubnet1RouteTable96A18886": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ConverseSqlAgentStack/NewPrivateSubnet1"
     }
    ],
    "VpcId": "vpc-0478b09b88b05919e"
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/NewPrivateSubnet1/RouteTable"
   }
  },
  "NewPrivateSubnet1RouteTableAssociationDDC307E1": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NewPrivateSubnet1RouteTable96A18886"
    },
    "SubnetId": {
     "Ref": "NewPrivateSubnet1Subnet545D8116"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/NewPrivateSubnet1/RouteTableAssociation"
   }
  },
  "NewPrivateSubnet2Subnet58D70B0B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1c",
    "CidrBlock": "172.31.128.0/20",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ConverseSqlAgentStack/NewPrivateSubnet2"
     }
    ],
    "VpcId": "vpc-0478b09b88b05919e"
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/NewPrivateSubnet2/Subnet"
   }
  },
  "NewPrivateSubnet2RouteTable73A6DC6B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ConverseSqlAgentStack/NewPrivateSubnet2"
     }
    ],
    "VpcId": "vpc-0478b09b88b05919e"
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/NewPrivateSubnet2/RouteTable"
   }
  },
  "NewPrivateSubnet2RouteTableAssociation02BBD897": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NewPrivateSubnet2RouteTable73A6DC6B"
    },
    "SubnetId": {
     "Ref": "NewPrivateSubnet2Subnet58D70B0B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/NewPrivateSubnet2/RouteTableAssociation"
   }
  },
  "NewPrivateSubnet3SubnetA975ED87": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1d",
    "CidrBlock": "172.31.144.0/20",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ConverseSqlAgentStack/NewPrivateSubnet3"
     }
    ],
    "VpcId": "vpc-0478b09b88b05919e"
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/NewPrivateSubnet3/Subnet"
   }
  },
  "NewPrivateSubnet3RouteTable4152B981": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ConverseSqlAgentStack/NewPrivateSubnet3"
     }
    ],
    "VpcId": "vpc-0478b09b88b05919e"
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/NewPrivateSubnet3/RouteTable"
   }
  },
  "NewPrivateSubnet3RouteTableAssociationE8246639": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NewPrivateSubnet3RouteTable4152B981"
    },
    "SubnetId": {
     "Ref": "NewPrivateSubnet3SubnetA975ED87"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/NewPrivateSubnet3/RouteTableAssociation"
   }
  },
  "NewPrivateSubnet4Subnet8324B678": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1e",
    "CidrBlock": "172.31.160.0/20",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ConverseSqlAgentStack/NewPrivateSubnet4"
     }
    ],
    "VpcId": "vpc-0478b09b88b05919e"
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/NewPrivateSubnet4/Subnet"
   }
  },
  "NewPrivateSubnet4RouteTableC0B4F604": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ConverseSqlAgentStack/NewPrivateSubnet4"
     }
    ],
    "VpcId": "vpc-0478b09b88b05919e"
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/NewPrivateSubnet4/RouteTable"
   }
  },
  "NewPrivateSubnet4RouteTableAssociation6CF5844D": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NewPrivateSubnet4RouteTableC0B4F604"
    },
    "SubnetId": {
     "Ref": "NewPrivateSubnet4Subnet8324B678"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/NewPrivateSubnet4/RouteTableAssociation"
   }
  },
  "NewPrivateSubnet5Subnet8255FDA5": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1f",
    "CidrBlock": "172.31.176.0/20",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ConverseSqlAgentStack/NewPrivateSubnet5"
     }
    ],
    "VpcId": "vpc-0478b09b88b05919e"
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/NewPrivateSubnet5/Subnet"
   }
  },
  "NewPrivateSubnet5RouteTable20561108": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ConverseSqlAgentStack/NewPrivateSubnet5"
     }
    ],
    "VpcId": "vpc-0478b09b88b05919e"
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/NewPrivateSubnet5/RouteTable"
   }
  },
  "NewPrivateSubnet5RouteTableAssociation8508B910": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NewPrivateSubnet5RouteTable20561108"
    },
    "SubnetId": {
     "Ref": "NewPrivateSubnet5Subnet8255FDA5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/NewPrivateSubnet5/RouteTableAssociation"
   }
  },
  "TEXT2SQLTable17335E23": {
   "Type": "AWS::DynamoDB::Table",
   "Properties": {
    "AttributeDefinitions": [
     {
      "AttributeName": "id",
      "AttributeType": "S"
     }
    ],
    "BillingMode": "PAY_PER_REQUEST",
    "KeySchema": [
     {
      "AttributeName": "id",
      "KeyType": "HASH"
     }
    ],
    "TableName": "advtext2sql_memory_tb"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/TEXT2SQLTable/Resource"
   }
  },
  "DBSecretD58955BC": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "GenerateSecretString": {
     "ExcludePunctuation": true,
     "GenerateStringKey": "password",
     "IncludeSpace": false,
     "SecretStringTemplate": "{\"username\": \"admin\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/DBSecret/Resource"
   }
  },
  "DBSecretAttachmentC565A14F": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "DBSecretD58955BC"
    },
    "TargetId": {
     "Ref": "MyRDSInstance48FD439C"
    },
    "TargetType": "AWS::RDS::DBInstance"
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/DBSecret/Attachment/Resource"
   }
  },
  "DBSubnetGroup": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for RDS database",
    "SubnetIds": [
     {
      "Ref": "NewPrivateSubnet0SubnetA4A9D5B6"
     },
     {
      "Ref": "NewPrivateSubnet1Subnet545D8116"
     },
     {
      "Ref": "NewPrivateSubnet2Subnet58D70B0B"
     },
     {
      "Ref": "NewPrivateSubnet3SubnetA975ED87"
     },
     {
      "Ref": "NewPrivateSubnet4Subnet8324B678"
     },
     {
      "Ref": "NewPrivateSubnet5Subnet8255FDA5"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/DBSubnetGroup/Default"
   }
  },
  "SharedSecurityGroupA3C42D70": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for RDS and Lambda",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "172.31.0.0/16",
      "Description": "Allow all inbound traffic from VPC CIDR",
      "IpProtocol": "-1"
     },
     {
      "CidrIp": "172.31.0.0/16",
      "Description": "from 172.31.0.0/16:443",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "VpcId": "vpc-0478b09b88b05919e"
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/SharedSecurityGroup/Resource"
   }
  },
  "SharedSecurityGroupfromConverseSqlAgentStackBastionHostSG32FA16E133066C2520C8": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Allow all inbound traffic on port 3306 from bastion",
    "FromPort": 3306,
    "GroupId": {
     "Fn::GetAtt": [
      "SharedSecurityGroupA3C42D70",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "BastionHostSG7EC1B225",
      "GroupId"
     ]
    },
    "ToPort": 3306
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/SharedSecurityGroup/from ConverseSqlAgentStackBastionHostSG32FA16E1:3306"
   }
  },
  "MyRDSInstance48FD439C": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t3.micro",
    "DBInstanceIdentifier": "myrdsdatabase",
    "DBSubnetGroupName": {
     "Ref": "DBSubnetGroup"
    },
    "DeleteAutomatedBackups": true,
    "DeletionProtection": false,
    "Engine": "mysql",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "DBSecretD58955BC"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "DBSecretD58955BC"
       },
       ":SecretString:username::}}"
      ]
     ]
    },
    "MaxAllocatedStorage": 100,
    "MultiAZ": false,
    "PubliclyAccessible": false,
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "SharedSecurityGroupA3C42D70",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/MyRDSInstance/Resource"
   }
  },
  "LambdaRole3A44B857": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
       ]
      ]
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/LambdaRole/Resource"
   }
  },
  "LambdaRoleDefaultPolicy75625A82": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "dynamodb:BatchGetItem",
        "dynamodb:BatchWriteItem",
        "dynamodb:ConditionCheckItem",
        "dynamodb:DeleteItem",
        "dynamodb:DescribeTable",
        "dynamodb:GetItem",
        "dynamodb:GetRecords",
        "dynamodb:GetShardIterator",
        "dynamodb:PutItem",
        "dynamodb:Query",
        "dynamodb:Scan",
        "dynamodb:UpdateItem"
       ],
       "Effect": "Allow",
       "Resource": [
        {
         "Fn::GetAtt": [
          "TEXT2SQLTable17335E23",
          "Arn"
         ]
        },
        {
         "Ref": "AWS::NoValue"
        }
       ]
      },
      {
       "Action": [
        "secretsmanager:DescribeSecret",
        "secretsmanager:GetSecretValue"
       ],
       "Effect": "Allow",
       "Resource": {
        "Ref": "DBSecretD58955BC"
       }
      },
      {
       "Action": "bedrock:InvokeModel",
       "Effect": "Allow",
       "Resource": "arn:aws:bedrock:us-east-1::foundation-model/us.anthropic.claude-3-5-sonnet-20240620-v1:0"
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "LambdaRoleDefaultPolicy75625A82",
    "Roles": [
     {
      "Ref": "LambdaRole3A44B857"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/LambdaRole/DefaultPolicy/Resource"
   }
  },
  "psycopg2final5AA29775": {
   "Type": "AWS::Lambda::LayerVersion",
   "Properties": {
    "CompatibleRuntimes": [
     "python3.11"
    ],
    "Content": {
     "S3Bucket": "cdk-hnb659fds-assets-589528729908-us-east-1",
     "S3Key": "91d798bf41fe886bb20bd9a15e75ef5b21ddd6bc73071fe02287e1bb790a3b71.zip"
    },
    "LayerName": "layer_content"
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/psycopg2_final/Resource",
    "aws:asset:path": "asset.91d798bf41fe886bb20bd9a15e75ef5b21ddd6bc73071fe02287e1bb790a3b71.zip",
    "aws:asset:is-bundled": false,
    "aws:asset:property": "Content"
   }
  },
  "SQLAgentFunctionD8DFD23D": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-589528729908-us-east-1",
     "S3Key": "bc593feb315397c20d4dc754e591a43ef690b5ed5f03211cb698a465e1b870d7.zip"
    },
    "Environment": {
     "Variables": {
      "DynamoDbMemoryTable": {
       "Ref": "TEXT2SQLTable17335E23"
      },
      "BedrockModelId": "us.anthropic.claude-3-5-sonnet-20240620-v1:0"
     }
    },
    "EphemeralStorage": {
     "Size": 2048
    },
    "FunctionName": "sqlagent",
    "Handler": "lambda_function.lambda_handler",
    "Layers": [
     {
      "Ref": "psycopg2final5AA29775"
     }
    ],
    "MemorySize": 1024,
    "Role": {
     "Fn::GetAtt": [
      "LambdaRole3A44B857",
      "Arn"
     ]
    },
    "Runtime": "python3.11",
    "Timeout": 900,
    "VpcConfig": {
     "SecurityGroupIds": [
      {
       "Fn::GetAtt": [
        "SharedSecurityGroupA3C42D70",
        "GroupId"
       ]
      }
     ],
     "SubnetIds": [
      {
       "Ref": "NewPrivateSubnet0SubnetA4A9D5B6"
      },
      {
       "Ref": "NewPrivateSubnet1Subnet545D8116"
      },
      {
       "Ref": "NewPrivateSubnet2Subnet58D70B0B"
      },
      {
       "Ref": "NewPrivateSubnet3SubnetA975ED87"
      },
      {
       "Ref": "NewPrivateSubnet4Subnet8324B678"
      },
      {
       "Ref": "NewPrivateSubnet5Subnet8255FDA5"
      }
     ]
    }
   },
   "DependsOn": [
    "LambdaRoleDefaultPolicy75625A82",
    "LambdaRole3A44B857",
    "NewPrivateSubnet0RouteTableAssociationEEAAB762",
    "NewPrivateSubnet1RouteTableAssociationDDC307E1",
    "NewPrivateSubnet2RouteTableAssociation02BBD897",
    "NewPrivateSubnet3RouteTableAssociationE8246639",
    "NewPrivateSubnet4RouteTableAssociation6CF5844D",
    "NewPrivateSubnet5RouteTableAssociation8508B910"
   ],
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/SQLAgentFunction/Resource",
    "aws:asset:path": "asset.bc593feb315397c20d4dc754e591a43ef690b5ed5f03211cb698a465e1b870d7",
    "aws:asset:is-bundled": false,
    "aws:asset:property": "Code"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/2VQy27CMBD8lt6NW6AXjgRahNRDlCCuaOMswSWxkXddFEX+9yoJgdCe5rFrjz0zOV28y7cXuNJE5edJqTPZpAzqLBIk651CAVc6NKhmstkA4xXq/UV9mPxitWGxOpp9vLrLrWF0R1A43klReae53jjrL+2JZ2NriMEobCd3Hjv9A4ypzwx2KQ+WWM+4g6zEh//wlkRWaWBtzb+orSkcEgWhoZJNYvsbBhyyY2ePukQR21Krup30LIi8NlDZPJPNPb4jQRAqh0wVGCjQySbt9O0BLethB65AXjKDOlVoRgt/J0G4nGTT/+5e3DoaG2tgyIBwXOA6GlQQJVRZDrL5ghrdHh3dOnnSn96ooayBB0HzAxAhk1y2IGguI6/OyBEQhq4TcFAhoxPdRspQaFMEEdd8suZ1LqdTuXj5Jq0nzhvWFcqkx18C65AXdAIAAA=="
   },
   "Metadata": {
    "aws:cdk:path": "ConverseSqlAgentStack/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amikernel510hvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter": {
   "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
   "Default": "/aws/service/ami-amazon-linux-latest/amzn2-ami-kernel-5.10-hvm-x86_64-gp2"
  },
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
